--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -63,8 +63,38 @@ flex-direction: column;
   width: 408px;
     height: 256px;
  
-    padding: 24px 0px 0px 0px;
+    padding: 24px;
     gap: 16px;
     border-radius: 8px 0px 0px 0px;
     opacity: 0px;
+}
+.label-class {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.input{
+  display: flex;
+width: 360px;
+  height: 40px;
+}
+.textarea{
+  width: 360px;
+  height: 80px;
+}
+.btn{
+  width: 95px;
+    height: 40px;
+    padding: 8px 16px 8px 16px;
+    border-radius: 8px;
+    background-color: #4E75FF;;
+    color:#ffff;
+    border: #4E75FF;
+}
+
+.form-container{
+  display: flex;
+  justify-content: center;
+  
+
 }
